<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item1"
        android:title="@string/copy"
        android:icon="@mipmap/ic_launcher_copy_round"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item2"
        android:title="@string/setting"
        android:icon="@mipmap/ic_launcher_setting_foreground"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item3"
        android:title="@string/appbar"
        app:showAsAction="never" />

    <item
        android:id="@+id/item4"
        android:title="@string/navigation"
        app:showAsAction="never" />


    <item
        android:id="@+id/item5"
        android:title="@string/signout"
        app:showAsAction="never" />

</menu>